# libhelium

./: .gitignore  README.md  class.AppBar.html  class.Application.html  class.ApplicationWindow.html  class.Badge.html  class.Banner.html  class.BottomBar.html  class.Button.html  class.Chip.html  class.ContentBlock.html  class.ContentBlockImage.html  class.ContentBlockImageCluster.html  class.ContentList.html  class.Desktop.html  class.Dialog.html  class.DisclosureButton.html  class.EmptyPage.html  class.FillButton.html  class.IconicButton.html  class.MiniContentBlock.html  class.ModifierBadge.html  class.OutlineButton.html  class.OverlayButton.html  class.PillButton.html  class.SideBar.html  class.TextButton.html  class.TintButton.html  class.Toast.html  class.View.html  class.ViewAux.html  class.ViewDual.html  class.ViewMono.html  class.ViewSubTitle.html  class.ViewSwitcher.html  class.ViewTitle.html  class.WelcomeScreen.html  class.Window.html  classes_hierarchy.html  ctor.AppBar.new.html  (+283 more)
data/: com.fyralabs.desktop.appearance.gschema.xml  gresource.xml  he.gresource.xml
demo/: co.tauos.Helium1.Demo.json  co.tauos.Helium1.Demo.json~  com.fyralabs.Helium1.Demo.json  meson.build
demo/data/: co.tauos.Helium1.Demo.desktop.in  co.tauos.Helium1.Demo.gresources.xml  com.fyralabs.Helium1.Demo.desktop.in  com.fyralabs.Helium1.Demo.gresources.xml  meson.build  style-dark.css  style.css
demo/data/ui/: menu.blp  settings.blp  window.blp  window.ui
demo/data/ui/sections/: avatar.blp  badges.blp  banner.blp  bottomsheet.blp  buttons.blp  chips.blp  colorpicker.blp  contentawarebin.blp  datepicker.blp  emptypage.blp  feedback.blp  groupedbutton.blp  menubutton.blp  overlaybutton.blp  progressbar.blp  slider.blp  splitbutton.blp  switch.blp  textfields.blp  timepicker.blp  tipview.blp  welcome.blp
demo/src/: config.vapi  main.vala  settings.vala  window.vala
demo/src/sections/: avatar.vala  badges.vala  banner.vala  bottomsheet.vala  buttons.vala  chips.vala  colorpicker.vala  contentawarebin.vala  datepicker.vala  emptypage.vala  feedback.vala  groupedbutton.vala  menubutton.vala  overlaybutton.vala  progressbar.vala  slider.vala  splitbutton.vala  switch.vala  textfields.vala  timepicker.vala  tipview.vala  welcome.vala
doc/: libhelium.toml.in  meson.build  style.css
example/: co.tauos.Helium1.Demo.gresources.xml  co.tauos.Helium1.Demo.json  main.vala  meson.build
example/data/: co.tauos.Helium1.Demo.desktop.in  co.tauos.Helium1.Demo.gresources.xml  meson.build
example/src/: window.vala
lib/: Config.vapi  Main.vala  meson.build
lib/Models/: Application.vala  Bin.vala  Button.vala  ButtonContent.vala  Colors.vala  DarkModeStrength.vala  StyleManager.vala  Tip.vala  View.vala  Window.vala
lib/Models/Animation/: Animation.vala  SpringAnimation.vala  TimedAnimation.vala
lib/Models/Schemes/: Content.vala  Default.vala  Monochromatic.vala  Monochrome.vala  Muted.vala  Salad.vala  Scheme.vala  SchemeFactory.vala  Vibrant.vala
lib/Utils/: Animation.vala  Color.vala  Desktop.vala  LatchLayout.vala  Math.vala  Misc.vala  Portal.vala  ViewingConditions.vala
lib/Utils/Animation/: Animation.vala  TimedAnimation.vala
lib/Utils/Color/: ARGB.vala  CAM16.vala  Cam16.vala  GdkRGBA.vala  Hexcode.vala  LAB.vala  LCH.vala  LCh.vala  Lab.vala  RGB.vala  XYZ.vala
lib/Utils/Color/HCT/: CriticalPlanes.vala  HCT.vala  HCTSolver.vala
lib/Utils/Ensor/: Contrast.vala  ContrastCurve.vala  DynamicColor.vala  DynamicScheme.vala  Ensor.vala  KeyColor.vala  Score.vala  TemperatureCache.vala  TonalPalette.vala  ToneDeltaPair.vala  ViewingConditions.vala
lib/Utils/Ensor/Quantize/: PointProvider.vala  PointProviderLab.vala  Quantizer.vala  QuantizerCelebi.vala  QuantizerMap.vala  QuantizerResult.vala  QuantizerWsmeans.vala  QuantizerWu.vala
lib/Utils/Ensor/Schemes/: Content.vala  Default.vala  Monochromatic.vala  Muted.vala  Salad.vala  Scheme.vala  SchemeFactory.vala  Vibrant.vala
lib/Widgets/: AboutWindow.vala  ActiveIndicator.vala  Album.vala  AlbumPage.vala  AppBar.vala  ApplicationWindow.vala  Avatar.vala  Badge.vala  Banner.vala  BottomBar.vala  BottomSheet.vala  Button.vala  Card.vala  Chip.vala  ChipGroup.vala  ColorPickerButton.vala  ContentBlock.vala  ContentBlockImage.vala  ContentBlockImageCluster.vala  ContentBlockImages.vala  ContentList.vala  DatePicker.vala  Dialog.vala  DisclosureButton.vala  Divider.vala  Dropdown.vala  EmptyPage.vala  FillButton.vala  GroupedButton.vala  IconicButton.vala  Latch.vala  MenuButton.vala  MiniContentBlock.vala  ModifierBadge.vala  NavigationRail.vala  NavigationSection.vala  OutlineButton.vala  OverlayButton.vala  PillButton.vala  ProgressBar.vala  (+28 more)
libhelium-1/: He.AboutWindow.AboutWindow.html  He.AboutWindow.Licenses.APACHEv2.html  He.AboutWindow.Licenses.GPLv3.html  He.AboutWindow.Licenses.MIT.html  He.AboutWindow.Licenses.MPLv2.html  He.AboutWindow.Licenses.PROPRIETARY.html  He.AboutWindow.Licenses.UNLICENSE.html  He.AboutWindow.Licenses.WTFPL.html  He.AboutWindow.Licenses.get_name.html  He.AboutWindow.Licenses.get_url.html  He.AboutWindow.Licenses.html  He.AboutWindow.app_id.html  He.AboutWindow.app_name.html  He.AboutWindow.color.html  He.AboutWindow.copyright_year.html  He.AboutWindow.developer_names.html  He.AboutWindow.html  He.AboutWindow.icon.html  He.AboutWindow.issue_url.html  He.AboutWindow.license.html  He.AboutWindow.more_info_url.html  He.AboutWindow.parent.html  He.AboutWindow.translate_url.html  He.AboutWindow.translator_names.html  He.AboutWindow.version.html  He.AppBar.AppBar.html  He.AppBar.add_child.html  He.AppBar.flat.html  He.AppBar.html  He.AppBar.show_back.html  He.AppBar.show_buttons.html  He.AppBar.stack.html  He.AppBar.title.html  (+239 more)
po/: ar.po  (+26 more)
src/: Application.vala  Colors.vala  Desktop.vala  meson.build
src/Buttons/: Button.vala  FillButton.vala  TintButton.vala
src/Models/: Application.vala  Button.vala
src/Utils/: Portal.vala
src/Widgets/: AppBar.vala  BottomBar.vala  DisclosureButton.vala  FillButton.vala  IconicButton.vala  OutlineButton.vala  OverlayButton.vala  PillButton.vala  TintButton.vala
(+461 files in other folders)
