option('demo', type: 'boolean', value: false, description: 'Include Demo app')
option(
    'stylesheet',
    type: 'boolean',
    value: true,
    description: 'Build and bundle the tau-helium stylesheet within the library',
)
option(
    'introspection',
    type: 'boolean',
    value: true,
    description: 'Generate GObject Introspection data, for use in GObject bindings',
)
option(
    'vapi',
    type: 'boolean',
    value: true,
    description: 'Make VAPI files to help with Vala integration',
)
option(
    'valadoc',
    type: 'boolean',
    value: false,
    description: 'Generate valadoc documentation',
)
option(
    'gidoc',
    type: 'boolean',
    value: false,
    description: 'Generate gidoc documentation (this will also generate valadoc, and currently requires Vala nightly)',
)
