sources += files(
	'Utils/Portal.vala',
	'Utils/Desktop.vala',

	'Models/Application.vala',
	'Models/Colors.vala',
	'Models/Button.vala',

	'Widgets/AppBar.vala',
	'Widgets/FillButton.vala',
	'Widgets/TintButton.vala',
	'Widgets/TextButton.vala',
	'Widgets/PillButton.vala',
	'Widgets/OutlineButton.vala',
	'Widgets/OverlayButton.vala',
	'Widgets/IconicButton.vala',
	'Widgets/ViewTitle.vala',
	'Widgets/BottomBar.vala',
)
